{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 414,
  "lineage": "e515b4fb-724e-632e-4ab4-6128ddc6dc16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dac88fabc2c58d1",
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:elastic-ip/eipalloc-08dac88fabc2c58d1",
            "association_id": "eipassoc-0ffc426cf4dcd5eb6",
            "domain": "vpc",
            "id": "eipalloc-08dac88fabc2c58d1",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0f8c78a60b4b3c5c2",
            "private_dns": "ip-10-253-1-9.ap-northeast-1.compute.internal",
            "private_ip": "10.253.1.9",
            "public_dns": "ec2-52-196-126-227.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.196.126.227",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "netbox-nat-eip"
            },
            "tags_all": {
              "Name": "netbox-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:internet-gateway/igw-090e78066e7bd9f26",
            "id": "igw-090e78066e7bd9f26",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "netbox-igw"
            },
            "tags_all": {
              "Name": "netbox-igw"
            },
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "netbox-load",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:loadbalancer/app/netbox-load/f40f4175ac56ea47",
            "arn_suffix": "app/netbox-load/f40f4175ac56ea47",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "netbox-load-1140701748.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:loadbalancer/app/netbox-load/f40f4175ac56ea47",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "netbox-load",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0bb6cdf88f81167b2",
              "sg-0e41ba231828814dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c858e5d6461e85dd"
              },
              {
                "subnet_id": "subnet-0edda817dc128c776"
              }
            ],
            "subnets": [
              "subnet-0c858e5d6461e85dd",
              "subnet-0edda817dc128c776"
            ],
            "vpc_id": "vpc-0cbb3fa6d63a9ca84",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:loadbalancer/app/netbox-load/f40f4175ac56ea47"
          },
          "dependencies": [
            "aws_security_group.lb-traffic",
            "aws_security_group.netbox-priv",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front-end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:listener/app/netbox-load/f40f4175ac56ea47/630428f569f21a9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:targetgroup/targets/d8f0fbd82634d4e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:listener/app/netbox-load/f40f4175ac56ea47/630428f569f21a9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:loadbalancer/app/netbox-load/f40f4175ac56ea47",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:listener/app/netbox-load/f40f4175ac56ea47/630428f569f21a9b"
          },
          "dependencies": [
            "aws_lb.netbox-load",
            "aws_lb_target_group.netbox-target",
            "aws_security_group.lb-traffic",
            "aws_security_group.netbox-priv",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "netbox-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:targetgroup/targets/d8f0fbd82634d4e3",
            "arn_suffix": "targetgroup/targets/d8f0fbd82634d4e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:targetgroup/targets/d8f0fbd82634d4e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:loadbalancer/app/netbox-load/f40f4175ac56ea47"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "targets",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:471112721372:targetgroup/targets/d8f0fbd82634d4e3"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dac88fabc2c58d1",
            "association_id": "eipassoc-0ffc426cf4dcd5eb6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e699b54242e44462",
            "network_interface_id": "eni-0f8c78a60b4b3c5c2",
            "private_ip": "10.253.1.9",
            "public_ip": "52.196.126.227",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edda817dc128c776",
            "tags": {
              "Name": "netbox-ngw"
            },
            "tags_all": {
              "Name": "netbox-ngw"
            },
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-1",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:route-table/rtb-0c35fe6f162d3fbbb",
            "id": "rtb-0c35fe6f162d3fbbb",
            "owner_id": "471112721372",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e699b54242e44462",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-to-NAT"
            },
            "tags_all": {
              "Name": "private-to-NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "rtb-0c35fe6f162d3fbbb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_subnet.public-1",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:route-table/rtb-07e922d772a29074d",
            "id": "rtb-07e922d772a29074d",
            "owner_id": "471112721372",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090e78066e7bd9f26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-all-rt"
            },
            "tags_all": {
              "Name": "public-all-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "rtb-07e922d772a29074d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f19eeaf221fa8e5",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c35fe6f162d3fbbb",
            "subnet_id": "subnet-0ce4fe5770951dd9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0545e5ae757b5cf70",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c35fe6f162d3fbbb",
            "subnet_id": "subnet-00d615325dc8243cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062713de35e9a9b74",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07e922d772a29074d",
            "subnet_id": "subnet-0edda817dc128c776"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018f712029a69d969",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07e922d772a29074d",
            "subnet_id": "subnet-0c858e5d6461e85dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-2",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group/sg-0e41ba231828814dd",
            "description": "allow internet traffic",
            "egress": [],
            "id": "sg-0e41ba231828814dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-Front-End",
            "name_prefix": "",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sg-0e41ba231828814dd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netbox-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group/sg-0bb6cdf88f81167b2",
            "description": "netbox ALB + ECS + RDS + Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "netbox to ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "netbox to postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "netbox to redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6379
              }
            ],
            "id": "sg-0bb6cdf88f81167b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB to NetBox",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS internal",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6379
              }
            ],
            "name": "netbox-sg",
            "name_prefix": "",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-0ce4fe5770951dd9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.253.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce4fe5770951dd9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-0ce4fe5770951dd9c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-00d615325dc8243cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.253.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d615325dc8243cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-00d615325dc8243cf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-0edda817dc128c776",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.253.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edda817dc128c776",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-0edda817dc128c776",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:subnet/subnet-0c858e5d6461e85dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.253.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c858e5d6461e85dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112721372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0cbb3fa6d63a9ca84"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "subnet-0c858e5d6461e85dd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netbox-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:vpc/vpc-0cbb3fa6d63a9ca84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.253.0.0/16",
            "default_network_acl_id": "acl-0d2e819b45c2b6bd8",
            "default_route_table_id": "rtb-06a9fab78527fda0f",
            "default_security_group_id": "sg-0814bb5935cd4f224",
            "dhcp_options_id": "dopt-0ce610dc678606327",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbb3fa6d63a9ca84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a9fab78527fda0f",
            "owner_id": "471112721372",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "netbox-vpc"
            },
            "tags_all": {
              "Name": "netbox-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "vpc-0cbb3fa6d63a9ca84",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-079626abeb46b0ba6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgr-079626abeb46b0ba6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-079626abeb46b0ba6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-079626abeb46b0ba6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-0e6411616c5afa504",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgr-0e6411616c5afa504",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-0e6411616c5afa504",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-0e6411616c5afa504",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "netbox_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-08ef8172674f8ef46",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "netbox to ALB",
            "from_port": 8080,
            "id": "sgr-08ef8172674f8ef46",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-08ef8172674f8ef46",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-08ef8172674f8ef46",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "postgres_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-09c1b0a0fb934615a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "netbox to postgres",
            "from_port": 5432,
            "id": "sgr-09c1b0a0fb934615a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-09c1b0a0fb934615a",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-09c1b0a0fb934615a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "redis_6379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-003f97ae60983baf6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "netbox to redis",
            "from_port": 6379,
            "id": "sgr-003f97ae60983baf6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-003f97ae60983baf6",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-003f97ae60983baf6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-02d6f81e406aa188b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB to NetBox",
            "from_port": 8080,
            "id": "sgr-02d6f81e406aa188b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-02d6f81e406aa188b",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-02d6f81e406aa188b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-013ada2159a126a48",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgr-013ada2159a126a48",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0e41ba231828814dd",
            "security_group_rule_id": "sgr-013ada2159a126a48",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-013ada2159a126a48",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.lb-traffic",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-0a794dd2fc6ec39ff",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTPS internal",
            "from_port": 443,
            "id": "sgr-0a794dd2fc6ec39ff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-0a794dd2fc6ec39ff",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-0a794dd2fc6ec39ff",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "postgres_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-0defdaf56683f8a7b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Postgres",
            "from_port": 5432,
            "id": "sgr-0defdaf56683f8a7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-0defdaf56683f8a7b",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-0defdaf56683f8a7b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis_6379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112721372:security-group-rule/sgr-020769ce63c8343c2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Redis",
            "from_port": 6379,
            "id": "sgr-020769ce63c8343c2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bb6cdf88f81167b2",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bb6cdf88f81167b2",
            "security_group_rule_id": "sgr-020769ce63c8343c2",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112721372",
            "id": "sgr-020769ce63c8343c2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.netbox-priv",
            "aws_vpc.netbox-vpc"
          ]
        }
      ]
    }
  ]
}